full implementation of boilerplate and docs
