# httperror/response.go
@@ -1,0 +1,6 @@
+package httperror
+
+// HTTPError example
+type HTTPError struct {
+	Message string `json:"message" example:"standard error message"`
+}
