# model/standard_model.go
@@ -1,0 +1,10 @@
+package model
+
+type Paging struct {
+	Page  int `json:"page"`
+	Total int `json:"total"`
+}
+
+type HTTPError struct {
+	Message string `json:"message"`
+}
